Refacto directory